--- a/templates/pages/venues.html
+++ b/templates/pages/venues.html
@@ -4,7 +4,7 @@
 {% for area in areas %}
 <h3>{{ area.city }}, {{ area.state }}</h3>
 	<ul class="items">
-		{% for venue in area.venues %}
+		{% for venue in areas %}
 		<li>
 			<a href="/venues/{{ venue.id }}">
 				<i class="fas fa-music"></i>
