--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -76,6 +76,8 @@
 </section>
 
 <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
+<a href="/venues/delete/{{ venue.id }}"><button class="btn btn-danger btn-lg">delete</button></a>
+
 
 {% endblock %}
 
