--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -45,7 +45,7 @@
 
        <div class="form-group">
             <label for="website_link">Website Link</label>
-            {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+            {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
        </div>
 
        <div class="form-group">
