--- a/templates/pages/shows.html
+++ b/templates/pages/shows.html
@@ -5,13 +5,13 @@
     {%for show in shows %}
     <div class="col-sm-4">
         <div class="tile tile-show">
-            <img src="{{ show.artist_image_link }}" alt="Artist Image" />
+            <img src="{{ show[1].image_link }}" alt="Artist Image" />
            
-              <h4>  {{ show[2].artist_id}}<h4>
+            <h4>{{ show[0].start_time }}</h4>
            
-            <h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
-            <p>playing at</p>
-            <h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
+            <h5><a href="/artists/{{ show[0].artist_id }}">{{ show[1].name }}</a></h5>
+            <p>playing at  </p>
+            <h5><a href="/venues/{{ show[0].venue_id }}">{{ show[2].name }}</a></h5>
         </div>
     </div>
     {% endfor %}
